Clean up directory structure

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -18,11 +18,11 @@
     <script>
         var FixtureFinder = {};
     </script>
-    <script src="../src/js/lib/moment.min.js"></script>
-    <script src="../src/js/fixture-parser.js"></script>
-    <script src="../src/js/fixture-date.js"></script>
-    <script src="../src/js/fixture-filter.js"></script>
-    <script src="../src/js/localize.js"></script>
+    <script src="../../js/lib/moment.min.js"></script>
+    <script src="../../js/fixture-parser.js"></script>
+    <script src="../../js/fixture-date.js"></script>
+    <script src="../../js/fixture-filter.js"></script>
+    <script src="../../js/localize.js"></script>
 
     <!-- include spec files here... -->
     <script src="resources/testFixtureData.js"></script>
@@ -142,23 +142,23 @@
 
     <script src="http://code.jquery.com/jquery-1.11.2.min.js">
     </script>
-    <script src="../js/lib/dropdowns-enhancement.js">
+    <script src="../../js/lib/dropdowns-enhancement.js">
     </script>
-    <script src="../js/lib/sorttable.js">
+    <script src="../../js/lib/sorttable.js">
     </script>
-    <script src="../js/lib/moment.min.js">
+    <script src="../../js/lib/moment.min.js">
     </script>
-    <script src="../js/initializer.js">
+    <script src="../../js/initializer.js">
     </script>
-    <script src="../js/fixture-parser.js">
+    <script src="../../js/fixture-parser.js">
     </script>
-    <script src="../js/fixture-retriever.js">
+    <script src="../../js/fixture-retriever.js">
     </script>
-    <script src="../js/fixture-date.js">
+    <script src="../../js/fixture-date.js">
     </script>
-    <script src="../js/fixture-filter.js">
+    <script src="../../js/fixture-filter.js">
     </script>
-    <script src="../js/localize.js">
+    <script src="../../js/localize.js">
     </script>
 
     <script>
